# tensorflow

tensorflow/: BUILD  __init__.py
tensorflow/contrib/cmake/: CMakeLists.txt  tf_c.cmake  tf_cc_ops.cmake  tf_core_distributed_runtime.cmake  tf_core_framework.cmake  tf_core_kernels.cmake  tf_core_ops.cmake  tf_grappler.cmake  tf_label_image_example.cmake  tf_python.cmake  tf_shared_lib.cmake  tf_tests.cmake  tf_tools.cmake  tf_tutorials.cmake
tensorflow/contrib/cmake/patches/abseil_cpp/: glibc.patch
tensorflow/contrib/cmake/patches/nsync/: CMakeLists.txt
tensorflow/contrib/cmake_mpi/: CMakeLists.txt
tensorflow/contrib/cmake_python/: CMakeLists.txt  python_modules.txt
tensorflow/contrib/lite/testing/: BUILD
tensorflow/contrib/lite/tools/benchmark/: BUILD
tensorflow/contrib/nccl/kernels/: nccl_manager.h  nccl_ops.cc
tensorflow/contrib/tensorrt/convert/: convert_nodes.cc
tensorflow/core/lib/strings/: numbers.cc
tensorflow/core/profiler/internal/: tfprof_timeline.h
tensorflow/tools/docker/: Dockerfile  Dockerfile.gpu
